Update EUREKA_INSTANCE_HOSTNAME environment variable to use static value instead of pod IP

--- a/charts/petclinic/templates/service.yaml
+++ b/charts/petclinic/templates/service.yaml
@@ -28,9 +28,7 @@ spec:
           {{- if $service.useEureka }}
           env:
             - name: EUREKA_INSTANCE_HOSTNAME
-              valueFrom:
-                fieldRef:
-                  fieldPath: status.podIP
+              value: {{ $name }}
           {{- end }}
           {{- with $service.env }}
           env:
