--- a/environments/prod/values.yaml
+++ b/environments/prod/values.yaml
@@ -68,8 +68,16 @@ prometheus:
   server:
     service:
       type: LoadBalancer
+    global:
+      evaluation_interval: 15s
+      rule_files:
+        - "/etc/prometheus/rules/*.yml"
   serverFiles:
     prometheus.yml:
+      global:
+        evaluation_interval: 15s
+      rule_files:
+        - "/etc/prometheus/rules/*.yml"
       scrape_configs:
         - job_name: prometheus
           static_configs:
@@ -90,21 +98,24 @@ prometheus:
           metrics_path: /actuator/prometheus
           static_configs:
             - targets: ['vets-service.petclinic-prod.svc.cluster.local:8083']
-      rule_files:
-        - /etc/prometheus/rules/*.yml
-    rules:
-      petclinic.rules.yml: |
-        groups:
-          - name: petclinic-alerts
-            rules:
-              - alert: High5xxRate
-                expr: increase(http_server_requests_seconds_count{status=~"5.."}[5m]) > 10
-                for: 1m
-                labels:
-                  severity: warning
-                annotations:
-                  summary: "High 5xx error rate"
-                  description: "More than 10 5xx requests in the last 5 minutes"
+  extraConfigmapMounts:
+    - name: prometheus-rules
+      mountPath: /etc/prometheus/rules
+      configMap: prometheus-rules
+      readOnly: true
+  rules:
+    petclinic.rules.yml: |
+      groups:
+        - name: petclinic-alerts
+          rules:
+            - alert: High5xxRate
+              expr: increase(http_server_requests_seconds_count{status=~"5.."}[5m]) > 10
+              for: 1m
+              labels:
+                severity: warning
+              annotations:
+                summary: "High 5xx error rate"
+                description: "More than 10 5xx requests in the last 5 minutes"
 
 loki-stack:
   grafana:
