--- a/environments/prod/values.yaml
+++ b/environments/prod/values.yaml
@@ -63,56 +63,38 @@ services:
     serviceType: LoadBalancer
 
 # Monitoring configuration
-prometheus:
+kube-prometheus-stack:
   enabled: true
-  prometheusSpec:
-    evaluationInterval: 15s
-    scrapeInterval: 15s
-    retention: "15d"
-    ruleSelectorNilUsesHelmValues: true
-
-  service:
-    type: LoadBalancer
-
-  additionalScrapeConfigs:
-    - job_name: prometheus
-      static_configs:
-        - targets: ['localhost:9090']
-
-    - job_name: api-gateway
-      metrics_path: /actuator/prometheus
-      static_configs:
-        - targets: ['api-gateway.petclinic-prod.svc.cluster.local:8080']
-
-    - job_name: customers-service
-      metrics_path: /actuator/prometheus
-      static_configs:
-        - targets: ['customers-service.petclinic-prod.svc.cluster.local:8081']
-
-    - job_name: visits-service
-      metrics_path: /actuator/prometheus
-      static_configs:
-        - targets: ['visits-service.petclinic-prod.svc.cluster.local:8082']
-
-    - job_name: vets-service
-      metrics_path: /actuator/prometheus
-      static_configs:
-        - targets: ['vets-service.petclinic-prod.svc.cluster.local:8083']
-
-  additionalPrometheusRulesMap:
-    petclinic-alerts:
-      groups:
-        - name: petclinic-alerts
-          rules:
-            - alert: High5xxRate
-              expr: increase(http_server_requests_seconds_count{status=~"5.."}[30s]) > 10
-              for: 0s
-              labels:
-                severity: warning
-              annotations:
-                summary: "High 5xx error rate"
-                description: "More than 10 5xx requests in the last 30 seconds"
-
+  prometheus:
+    service:
+      type: LoadBalancer
+    prometheusSpec:
+      evaluationInterval: 15s
+      scrapeInterval: 15s
+      retention: "15d"
+      ruleSelectorNilUsesHelmValues: false
+      serviceMonitorSelectorNilUsesHelmValues: false
+      additionalScrapeConfigs:
+        - job_name: api-gateway
+          metrics_path: /actuator/prometheus
+          static_configs:
+            - targets: ['api-gateway.petclinic-prod.svc.cluster.local:8080']
+        - job_name: customers-service
+          metrics_path: /actuator/prometheus
+          static_configs:
+            - targets: ['customers-service.petclinic-prod.svc.cluster.local:8081']
+        - job_name: visits-service
+          metrics_path: /actuator/prometheus
+          static_configs:
+            - targets: ['visits-service.petclinic-prod.svc.cluster.local:8082']
+        - job_name: vets-service
+          metrics_path: /actuator/prometheus
+          static_configs:
+            - targets: ['vets-service.petclinic-prod.svc.cluster.local:8083']
+  
+  grafana:
+    service:
+      type: LoadBalancer
 
 loki-stack:
   grafana:
