--- a/environments/staging/values.yaml
+++ b/environments/staging/values.yaml
@@ -68,6 +68,10 @@ prometheus:
   server:
     service:
       type: LoadBalancer
+  alertmanager:
+    enabled: true
+    service:
+      type: ClusterIP
   serverFiles:
     prometheus.yml:
       scrape_configs:
@@ -90,24 +94,104 @@ prometheus:
           metrics_path: /actuator/prometheus
           static_configs:
             - targets: ['vets-service.petclinic-staging.svc.cluster.local:8083']
-      rule_files:
-        - /etc/prometheus/rules/petclinic.rules.yml
-    rules:
-      petclinic.rules.yml: |-
-        groups:
-          - name: petclinic-alerts
-            rules:
-              - alert: High5xxRate
-                expr: increase(http_server_requests_seconds_count{status=~"5.."}[5m]) > 10
-                for: 1m
-                labels:
-                  severity: warning
-                annotations:
-                  summary: "High 5xx error rate"
-                  description: "More than 10 5xx requests in the last 5 minutes"
+    alerts:
+      groups:
+        - name: petclinic-staging-alerts
+          rules:
+            - alert: HighErrorRate
+              expr: increase(http_server_requests_seconds_count{status=~"4..|5.."}[30s]) > 15
+              for: 1m
+              labels:
+                severity: warning
+                environment: staging
+                service: "{{ $labels.job }}"
+              annotations:
+                summary: "High error rate detected in staging"
+                description: "Service {{ $labels.job }} has more than 15 error requests in the last 30 seconds"
+            - alert: ServiceDown
+              expr: up == 0
+              for: 1m
+              labels:
+                severity: warning
+                environment: staging
+              annotations:
+                summary: "Service is down in staging"
+                description: "Service {{ $labels.job }} has been down for more than 1 minute"
+  alertmanagerFiles:
+    alertmanager.yml:
+      global:
+        smtp_smarthost: 'localhost:587'
+        smtp_from: 'staging-alerts@petclinic.com'
+      route:
+        group_by: ['alertname', 'environment']
+        group_wait: 30s
+        group_interval: 5m
+        repeat_interval: 4h
+        receiver: 'staging-notifications'
+      receivers:
+        - name: 'staging-notifications'
+          webhook_configs:
+            - url: 'http://staging-alertmanager-webhook:5001/'
 
 loki-stack:
   grafana:
     enabled: true
     service:
       type: LoadBalancer
+    adminPassword: staging123
+    datasources:
+      datasources.yaml:
+        apiVersion: 1
+        datasources:
+          - name: Prometheus
+            type: prometheus
+            url: http://prometheus-server.petclinic-staging.svc.cluster.local
+            access: proxy
+          - name: Loki
+            type: loki
+            url: http://loki.petclinic-staging.svc.cluster.local:3100
+            access: proxy
+          - name: Jaeger
+            type: jaeger
+            url: http://tracing-server.petclinic-staging.svc.cluster.local:9411
+            access: proxy
+  loki:
+    config:
+      schema_config:
+        configs:
+          - from: 2020-10-24
+            store: boltdb-shipper
+            object_store: filesystem
+            schema: v11
+            index:
+              prefix: staging_index_
+              period: 24h
+      server:
+        http_listen_port: 3100
+  promtail:
+    enabled: true
+    config:
+      clients:
+        - url: http://loki.petclinic-staging.svc.cluster.local:3100/loki/api/v1/push
+      scrape_configs:
+        - job_name: kubernetes-pods
+          kubernetes_sd_configs:
+            - role: pod
+              namespaces:
+                names: ['petclinic-staging']
+          relabel_configs:
+            - source_labels: [__meta_kubernetes_pod_container_name]
+              target_label: container
+            - source_labels: [__meta_kubernetes_namespace]
+              target_label: namespace
+            - source_labels: [__meta_kubernetes_pod_name]
+              target_label: pod
+          pipeline_stages:
+            - match:
+                selector: '{container=~".*petclinic.*"}'
+                stages:
+                  - regex:
+                      expression: '.*traceId=(?P<trace_id>[a-f0-9]+).*'
+                  - labels:
+                      trace_id:
+                      environment: staging
